# long-term-forecasting

./: .gitignore  CLAUDE.md  LICENSE  MIGRATION_GUIDE.md  PROJECT_OVERVIEW.md  README.md  TODO.md  WORKFLOW_DOCUMENTATION.md  calibrate_hindcast.py  calibration_script.sh  example_meta_learning_usage.py  github_issue_evaluation_pipeline.md  log_config.py  performance_test.py  pyproject.toml  run_evaluation_pipeline.sh  run_model_workflow.sh  setup.py  test_evaluation_pipeline.py  tune_and_calibrate_script.sh  tune_hyperparams.py  verify_sciregressor_performance.py
.claude/: README.md
.claude/agents/: library-context-retriever.md  ml-timeseries-validator.md  pr-code-reviewer.md  spec-compliance-reviewer.md  test-writer.md
.claude/commands/: create_issue.md  handle_review.md  issue.md  reviewPR.md  update_docs.md
.github/: README.md  copilot-instructions.md
.github/workflows/: ci.yml
.serena/: project.yml
dev_tools/: __init__.py
docs/: LLM_REFACTORING_PROMPT.md  Monthly_Workflow_updated.drawio  Overview.md  README.md  VERSION_MANAGEMENT.md  description.md  development_production_plan.md  feature_engineering.md  how_to_add_model.md  long_term_mean_scaling_config.md  meta_learning_framework.md  model_description.md  prediction_loader_docs.md
eval_scr/: README.md  eval_helper.py  metric_functions.py
evaluation/: README.md  __init__.py  ensemble_builder.py  evaluate_models.py  evaluate_pipeline.py  prediction_loader.py
example_config/: description.md
forecast_models/: LINEAR_REGRESSION.py  README.md  SciRegressor.py  base_class.py  documentation.md
logs/: log
lt_forecasting/: __init__.py
monthly_forecasting/: __init__.py
notebooks/: GM_eval_results.ipynb  NIR_EDA.ipynb  eda_seasonal.ipynb  random_notebook.ipynb  visualize_meta_learner_weights.ipynb
output/: quality_report.txt  timing_report.json
scr/: FeatureExtractor.py  FeatureProcessingArtifacts.py  README.md  data_loading.py  data_utils.py  documentation.md  sci_utils.py  tree_utils.py
scratchpads/: README.md
scripts/: __init__.py  analyze_mcald_ensemble_behavior.py  calibrate_hindcast.py  diagnose_mcald_skill_sources.py  evaluate_bayesian_postprocessing.py  evaluate_operational.py  examine_operational_fc.py  gp_seasonal_forecast.py  investigate_mcald.py  quarter_forecast_vis.py  run_operational_prediction.py  seasonal_correlation.py  seasonal_forecast_vis.py  tune_hyperparams.py  visualize_operational_fc.py  visualize_operational_hindcast.py  visualize_performance.py
scripts/logs/: log
tests/: LOGGING_GUIDE.md  README.md  README_LINEAR_REGRESSION_TESTS.md  README_SCIREGRESSOR_TESTS.md  comprehensive_test_configs.py  comprehensive_test_utils.py  test_base_class.py  test_create_plots.py  test_data_utils.py  test_enhanced_feature_processing.py  test_enhanced_long_term_mean_scaling.py  test_feature_processing.py  test_linear_regression.py  test_long_term_mean_enhancements.py  test_long_term_mean_integration.py  test_long_term_mean_scaling_enhanced.py  test_relative_target_scaling_fix.py  test_sci_utils.py  test_sciregressor.py
visualization/: README.md  dashboard.py  dashboard_components.py  data_handlers.py  plotting_utils.py
(+163 files in other folders)
