[project]
name = "monthly-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost==1.2.3",
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.7.1",
    "fiona==1.9.5",
    "geopandas==0.14.3",
    "lightgbm==4.5.0",
    "matplotlib==3.8.2",
    "numpy==1.26.4",
    "optuna==3.5.0",
    "pandas==2.2.0",
    "pe-oudin==0.3",
    "plotly>=5.18.0",
    "pyarrow==15.0.0",
    "pytest==8.4.1",
    "scikit-learn==1.4.0",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "tqdm==4.66.2",
    "xgboost==2.0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--import-mode=importlib",
]
